my-service/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels: { app: my-service }
  template:
    metadata:
      labels: { app: my-service }
    spec:
      containers:
        - name: my-service
          image: my-service:v1
          imagePullPolicy: Never        # use locally imported image
          ports:
            - containerPort: 3000
