my-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-app
spec:
  selector: { app: my-service }
  ports:
    - port: 80
      targetPort: 3000
